// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VoteView /> should not render when our ouf range percentage 1`] = `""`;

exports[`<VoteView /> should render correctly 1`] = `
<VoteViewstyle__Container
  key="42"
  left={42}
  right={58}
>
  <div>
    <div>
      <div
        className="circle"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="0-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="1-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="2-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <span>
      42%
    </span>
    <span>
      58%
    </span>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should render correctly when 0% positive 1`] = `
<VoteViewstyle__Container
  key="0"
  left={0}
  right={100}
>
  <div>
    <div
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="0-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="1-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="2-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="3-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="4-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble reverse"
        key="5-red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <span>
      0%
    </span>
  </div>
</VoteViewstyle__Container>
`;

exports[`<VoteView /> should render correctly when 100% positive 1`] = `
<VoteViewstyle__Container
  key="100"
  left={100}
  right={0}
>
  <div>
    <div>
      <div
        className="circle"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="0-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="1-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="2-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="3-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="4-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
      <div
        className="bubble"
        key="5-green"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
    <div
      style={
        Object {
          "opacity": 0,
        }
      }
    >
      <div
        className="circle red"
      >
        <Icon
          color="white"
          name="THUMB_UP"
          size="lg"
        />
      </div>
    </div>
  </div>
  <div>
    <span>
      <span
        className="progressBar"
      />
    </span>
    <span>
      <span
        className="progressBar red"
      />
    </span>
  </div>
  <div>
    <span>
      100%
    </span>
  </div>
</VoteViewstyle__Container>
`;
